ghc-4335c07/testsuite/tests/typecheck/should_fail/T8034.hs
{-# LANGUAGE TypeFamilies #-}
module T8034 where

class C a where
  type F a
  foo :: F a -> F a
